ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
  name: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - httpserver.com
      secretName: httpserver-tls
  rules:
    - host: httpserver.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpsvc
                port:
                  number: 80
